--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
+    "@google/genai": "latest",
+    "@vercel/blob": "^1.1.1",
+    "next": "^15.4.6",
     "react": "^19.1.1",
-    "recharts": "^3.1.2",
-    "@google/genai": "latest"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
